Show inflation across commodity views

--- a/Index.html
+++ b/Index.html
@@ -356,7 +356,7 @@
           <div class="val" id="basketIndex">—</div>
         </div>
         <div class="kpi">
-          <div class="label" id="inflLabel">Inflation vs baseline (USD)</div>
+          <div class="label" id="inflLabel">Inflation vs baseline (USD view)</div>
           <div class="val" id="infl">—</div>
         </div>
       </div>
@@ -1378,6 +1378,8 @@
         }
       }
     });
+
+    renderBasketCommodityStats(hist);
   }
 
   function renderBasketCommodityStats(hist){
